autonomous shooter with constant velocity and we alter the angles.